Menu class ,cout of buttons and responsive size

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/builds/lib)
 #add_subdirectory(Testing)
 
 add_library( player src/player.cpp )
-
+add_library( menu src/menu.cpp )
 add_executable( main src/main.cpp )
-target_link_libraries( main player )
+target_link_libraries( main player menu )
 
