--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,9 @@ SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/builds/lib)
 add_library( player src/player.cpp )
 add_library( menu src/menu.cpp )
 add_library( room src/room.cpp )
+add_library( npc src/npc.cpp )
 add_executable( main src/main.cpp )
-target_link_libraries( main player menu room )
+target_link_libraries( main player menu room npc )
 
 
 
