--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,9 @@ add_library( player src/player.cpp )
 add_library( menu src/menu.cpp )
 add_library( room src/room.cpp )
 add_library( npc src/npc.cpp )
+add_library( conv src/conv.cpp )
 add_executable( main src/main.cpp )
-target_link_libraries( main player menu room npc )
+target_link_libraries( main player menu room npc conv )
 
 
 
