--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,9 @@ add_library( npc src/npc.cpp )
 add_library( conv src/conv.cpp )
 add_library( inventory src/inventory.cpp )
 add_library( item src/item_class_src/item.cpp )
+add_library( weapon src/item_class_src/weapon.cpp )
 add_executable( main src/main.cpp )
-target_link_libraries( main player menu room npc conv item inventory )
+target_link_libraries( main player menu room npc conv item inventory weapon)
 
 
 
